--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "M01T01": "nodemon src/module01/task01-stdin-stdout.ts"
+    "M01T01": "nodemon src/module01/task01-stdin-stdout.ts",
+    "M01T02": "nodemon src/module01/task02-csv-to-json.ts"
   },
   "author": "",
   "license": "ISC",
@@ -14,5 +15,8 @@
     "nodemon": "^2.0.15",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.2"
+  },
+  "dependencies": {
+    "csvtojson": "^2.0.10"
   }
 }
